@@ -1,6 +1,13 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.408 2008/06/05 14:03:57 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.409 2008/06/12 15:23:37 armin76 Exp $
+
+*mozilla-firefox-3.0_rc3 (12 Jun 2008)
+
+  12 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  -mozilla-firefox-3.0_rc1-r1.ebuild, -mozilla-firefox-3.0_rc2.ebuild,
+  +mozilla-firefox-3.0_rc3.ebuild:
+  Version bump, remove old
 
 *mozilla-firefox-3.0_rc2 (05 Jun 2008)
 
